# rlhf-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: gradio_demo.py
configs/: base_config.yaml
scripts/: run_all.sh  run_demo.sh  run_dpo.sh  run_eval.sh  run_ppo.sh  run_rm.sh  run_sft.sh
src/: __init__.py
src/data/: __init__.py  prepare_ultrafeedback.py
src/dpo/: __init__.py  config.py  train.py
src/eval/: __init__.py  alpaca_eval.py  mt_bench.py  reward_eval.py
src/ppo/: __init__.py  config.py  train.py
src/rm/: __init__.py  config.py  train.py
src/sft/: __init__.py  config.py  train.py
