[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-lab"
version = "0.1.0"
description = "RLHF/DPO Pipeline for Small Base Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rlhf", "dpo", "ppo", "llm", "fine-tuning", "preference-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=2.20.0",
    "trl>=0.11.0",
    "peft>=0.12.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
    "gradio>=4.40.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
eval = [
    "alpaca-eval>=0.6.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rlhf-sft = "src.sft.train:main"
rlhf-rm = "src.rm.train:main"
rlhf-dpo = "src.dpo.train:main"
rlhf-ppo = "src.ppo.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
